Better makefile uses his runall

--- a/LexicalAnalyzer/Makefile
+++ b/LexicalAnalyzer/Makefile
@@ -2,8 +2,12 @@
 
 all: test
 
-verify: rec.sml
+verify: rec.sml tok.sml
 	echo 'use "rec.sml";' | sml
+	echo 'use "tok.sml";' | sml
 
-test: rec.sml test.sml
+test: rec.sml tok.sml test.sml
 	echo 'use "test.sml";' | sml
+
+runall: rec.sml tok.sml
+	./runall rec.sml tok.sml
